frontend/test/should_pass/exectype_VarPredicateUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(::x=true && ::x);
	}
}