frontend/test/should_fail/exectype_SetmapClear2.grg
using exectype;

rule r
{
	modify  {
		exec(x:HH=vari && x.clear());
	}
}